# slurmdeck

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  configuration.md  remote-protocol.md  sweeps.md  tui.md
src/slurmdeck/: __init__.py  __main__.py  errors.py  operations.py  structured_errors.py
src/slurmdeck/agent/: __init__.py  agent.py  env_agent.py  protocol.py
src/slurmdeck/cli/: _deps.py  _output.py  env.py  main.py  project.py  remote.py  run.py  snapshot.py  submit.py  sweep.py
src/slurmdeck/models/: __init__.py  cluster.py  common.py  env.py  project.py  remote.py  resources.py  run.py  status.py  sweep.py
src/slurmdeck/planning/: __init__.py  commandline.py  placeholders.py  sweep.py
src/slurmdeck/presentation/: __init__.py  states.py  themes.py
src/slurmdeck/rendering/: __init__.py
src/slurmdeck/rendering/templates/: array.sbatch.j2
src/slurmdeck/services/: __init__.py  cluster.py  context.py  doctor.py  env_binding.py  env_cache.py  env_execution.py  env_lifecycle.py  env_planning.py  env_registry.py  logs.py  remotes.py  results.py  run_materialization.py  run_planning.py  run_recovery.py  run_submission.py  runs.py  snapshots.py  status.py
src/slurmdeck/slurm/: __init__.py  commands.py  parse.py
src/slurmdeck/storage/: __init__.py  db.py  paths.py  permissions.py  repos.py  user_store.py  yamlio.py
src/slurmdeck/transport/: __init__.py  errors.py  ssh.py
src/slurmdeck/tui/: app.py  controller.py  drafts.py  filters.py  format.py  messages.py  styles.tcss  workflows.py
src/slurmdeck/tui/screens/: __init__.py  _run_actions.py  base.py  doctor.py  env_logs.py  envs.py  help.py  logs.py  record_detail.py  remotes.py  run_detail.py  (+1 more)
tests/: conftest.py  test_presentation.py
tests/cli/: test_cli.py  test_output_manager.py  test_output_operations.py
tests/e2e/: test_full_flow.py
tests/fakes/: transport.py
tests/faults/: __init__.py  test_doctor_faults.py  test_environment_fault_matrix.py  test_run_cleanup_faults.py  test_run_submission_faults.py
tests/perf/: __init__.py  test_ux_budgets.py
tests/tui/: svg_fixtures.py  test_format.py  test_operation_events.py  test_pilot.py  test_responsive.py  test_scheduler.py  test_table_sync.py  test_visual_contracts.py  test_workflows.py
tests/unit/: test_agent.py  test_cluster_profiles.py  test_env_cache.py  test_env_executors.py  test_env_operations.py  test_env_planning.py  test_env_registry.py  test_env_run_binding.py  test_errors.py  test_fake_transport_controls.py  test_misc_services.py  test_models.py  test_operations.py  test_placeholders.py  test_run_materialization.py  test_run_planning.py  test_run_recovery.py  test_runs_service.py  test_service_operations.py  test_slurm.py  test_snapshots.py  test_status_models.py  test_status_service.py  test_storage.py  test_sweep_planning.py  test_transport.py  test_version.py
(+8 files in other folders)
