[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slurmdeck"
version = "0.1.0"
description = "End-to-end workflow manager for Slurm clusters: environments, runs, monitoring, and results over SSH"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "SlurmDeck Contributors" }]
keywords = ["hpc", "slurm", "ssh", "rsync", "workflow", "tui"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: System :: Distributed Computing",
]
dependencies = [
  "jinja2>=3.1",
  "platformdirs>=4",
  "pydantic>=2.7",
  "PyYAML>=6.0.1",
  "rich>=13.8",
  "textual>=8.0",
  "typer>=0.26",
]

[project.optional-dependencies]
dev = [
  "commitizen>=4.16.4",
  "mypy>=2.2.0",
  "pre-commit>=4.6.0",
  "pytest>=8.0",
  "pytest-asyncio>=0.23.5",
  "ruff>=0.15.21",
  "types-PyYAML",
]

[project.scripts]
slurmdeck = "slurmdeck.cli.main:main"

[project.urls]
Homepage = "https://github.com/dejay-vu/slurmdeck"
Repository = "https://github.com/dejay-vu/slurmdeck.git"
Issues = "https://github.com/dejay-vu/slurmdeck/issues"
Documentation = "https://github.com/dejay-vu/slurmdeck/tree/main/docs"
Changelog = "https://github.com/dejay-vu/slurmdeck/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
slurmdeck = [
  "py.typed",
  "rendering/templates/*.j2",
  "agent/agent.py",
  "agent/env_agent.py",
  "tui/*.tcss",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
required-version = ">=0.15.21"
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]

[tool.ruff.lint.flake8-bugbear]
# Typer declares CLI parameters via function-call defaults by design.
extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.mypy]
files = ["src/slurmdeck"]
mypy_path = "src"
python_version = "3.11"
plugins = ["pydantic.mypy"]
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# The remote agent is a standalone stdlib-only file that must run on the
# cluster's python3 (>= 3.8); it deliberately carries no annotations.
[[tool.mypy.overrides]]
module = ["slurmdeck.agent.agent", "slurmdeck.agent.env_agent"]
disallow_untyped_defs = false

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
version_scheme = "pep440"
tag_format = "v$version"
message_length_limit = 72
bump_message = "bump: version $current_version → $new_version"
